--- a/styles/Home.module.css
+++ b/styles/Home.module.css
@@ -3,114 +3,180 @@
 }
 
 .main {
+  width: 100%;
   min-height: 100vh;
-  padding: 4rem 0;
+  padding: 0;
   flex: 1;
+  display: flex;
+  justify-content: space-between;
+  background-image: url("https://pbs.twimg.com/media/FE3pM9LVkAgVg7w?format=jpg&name=orig");
+  background-repeat: no-repeat;
+  background-size: cover;
+}
+
+.container {
+  padding: 0;
+  margin: 0;
+}
+
+.left {
+  width: 50%;
+  /*outline: 2px solid red;*/
+  box-sizing: border-box;
   display: flex;
   flex-direction: column;
-  justify-content: center;
-  align-items: center;
+  justify-content: space-between;
+  align-items: flex-start;
 }
 
-.footer {
-  display: flex;
-  flex: 1;
-  padding: 2rem 0;
-  border-top: 1px solid #eaeaea;
-  justify-content: center;
-  align-items: center;
+.atas {
+  padding-left: 350px;
+  /*outline: 2px solid red;*/
 }
 
-.footer a {
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  flex-grow: 1;
-}
-
-.title a {
-  color: #0070f3;
-  text-decoration: none;
-}
-
-.title a:hover,
-.title a:focus,
-.title a:active {
-  text-decoration: underline;
+.logo {
+  margin: 0;
+  margin-top: 20px;
+  margin-bottom: 40px;
+  padding: 0;
+  text-align: left;
 }
 
 .title {
   margin: 0;
-  line-height: 1.15;
-  font-size: 4rem;
+  margin-bottom: 5px;
+  padding: 0;
+  color: white;
+  font-weight: 500;
+  font-size: 40px;
 }
 
-.title,
-.description {
-  text-align: center;
+.subtitle {
+  margin: 0;
+  padding: 0;
+  color: white;
+  font-size: 16px;
 }
 
-.description {
-  margin: 4rem 0;
-  line-height: 1.5;
-  font-size: 1.5rem;
+.mascot {
+  width: 550px;
 }
 
-.code {
-  background: #fafafa;
+.right {
+  width: 50%;
+  display: flex;
+  /*margin-left: 200px;*/
+}
+
+.docsEx {
+  /*outline: 2px solid red;*/
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+}
+
+.boxRight {
+  z-index: 99;
+  width: 450px;
+  border: 2px solid #654CE1;
   border-radius: 5px;
-  padding: 0.75rem;
-  font-size: 1.1rem;
-  font-family: Menlo, Monaco, Lucida Console, Liberation Mono, DejaVu Sans Mono,
-    Bitstream Vera Sans Mono, Courier New, monospace;
+  padding: 15px 25px;
+  margin: 10px 0;
+  margin-left: 100px;
 }
 
-.grid {
+.boxRight:hover {
+  border-color: #444;
+}
+
+.boxTitle {
   display: flex;
   align-items: center;
-  justify-content: center;
-  flex-wrap: wrap;
-  max-width: 800px;
+  justify-content: space-between;
 }
 
-.card {
-  margin: 1rem;
-  padding: 1.5rem;
-  text-align: left;
-  color: inherit;
-  text-decoration: none;
-  border: 1px solid #eaeaea;
-  border-radius: 10px;
-  transition: color 0.15s ease, border-color 0.15s ease;
-  max-width: 300px;
-}
-
-.card:hover,
-.card:focus,
-.card:active {
-  color: #0070f3;
-  border-color: #0070f3;
-}
-
-.card h2 {
-  margin: 0 0 1rem 0;
-  font-size: 1.5rem;
-}
-
-.card p {
+.docs {
+  font-family: Poppins;
+  font-size: 25px;
+  font-weight: 400;
+  letter-spacing: 1px;
+  color: #444444;
   margin: 0;
-  font-size: 1.25rem;
-  line-height: 1.5;
+  padding: 7px 0;
 }
 
-.logo {
-  height: 1em;
-  margin-left: 0.5rem;
+.ex {
+  margin: 0;
+  color: #707070;
+  font-size: 21px;
+  padding: 7px 0;
+  font-weight: 400;
 }
 
-@media (max-width: 600px) {
+@media (max-width: 1400px) {
   .grid {
     width: 100%;
     flex-direction: column;
   }
+
+  .atas {
+    padding-left: 275px;
+    /*outline: 2px solid red;*/
+  }
+
+  .logo {
+    width: 100px;
+    margin: 0;
+    margin-top: 15px;
+    margin-bottom: 30px;
+    padding: 0;
+    text-align: left;
+  }
+
+  .title {
+    margin: 0;
+    margin-bottom: 5px;
+    padding: 0;
+    color: white;
+    font-weight: 500;
+    font-size: 30px;
+  }
+
+  .subtitle {
+    margin: 0;
+    padding: 0;
+    color: white;
+    font-size: 12.5px;
+  }
+
+  .mascot {
+    width: 475px;
+  }
+
+  .boxRight {
+    width: 325px;
+    border: 2px solid #654CE1;
+    background: #fff;
+    margin-left: 150px;
+  }
+
+  .docs {
+    font-family: Poppins;
+    font-size: 20px;
+    font-weight: 400;
+    letter-spacing: 1px;
+    color: #444444;
+    margin: 0;
+    padding: 7px 0;
+  }
+
+  .ex {
+    margin: 0;
+    color: #707070;
+    font-size: 15px;
+    padding: 7px 0;
+    font-weight: 400;
+  }
+
+
 }
