--- a/styles/Home.module.css
+++ b/styles/Home.module.css
@@ -9,7 +9,7 @@
   flex: 1;
   display: flex;
   justify-content: space-between;
-  background-image: url("../public/assets/img/bg.png");
+  background-image: url("https://pbs.twimg.com/media/FE3pM9LVkAgVg7w?format=jpg&name=orig");
   background-repeat: no-repeat;
   background-size: cover;
 }
@@ -21,6 +21,7 @@
 
 .left {
   width: 50%;
+  /*outline: 2px solid red;*/
   box-sizing: border-box;
   display: flex;
   flex-direction: column;
@@ -30,6 +31,7 @@
 
 .atas {
   padding-left: 350px;
+  /*outline: 2px solid red;*/
 }
 
 .logo {
@@ -38,7 +40,6 @@
   margin-bottom: 40px;
   padding: 0;
   text-align: left;
-  user-select: none;
 }
 
 .title {
@@ -59,15 +60,16 @@
 
 .mascot {
   width: 550px;
-  user-select: none;
 }
 
 .right {
   width: 50%;
   display: flex;
+  /*margin-left: 200px;*/
 }
 
 .docsEx {
+  /*outline: 2px solid red;*/
   display: flex;
   flex-direction: column;
   justify-content: center;
@@ -103,12 +105,6 @@
   padding: 7px 0;
 }
 
-.arrow {
-  height: 20px;
-  width: 20px;
-  user-select: none;
-}
-
 .ex {
   margin: 0;
   color: #707070;
@@ -125,6 +121,7 @@
 
   .atas {
     padding-left: 275px;
+    /*outline: 2px solid red;*/
   }
 
   .logo {
@@ -180,4 +177,6 @@
     padding: 7px 0;
     font-weight: 400;
   }
+
+
 }
